# ops-classifierd

./: .gitreview  AUTHORS  CMakeLists.txt  DESIGN.md  README.md
include/: ops-classifierd.h  ops-cls-asic-plugin.h
ops-tests/: testsuite_gate@component.conf
ops-tests/component/: acl_component_test.md  mirror_component_test.md  qos_component_test.md  test_classifierd_ct_ace_apply.py  test_classifierd_ct_ace_parameters.py  test_classifierd_ct_acl_create_delete.py  test_copp_cli.py  test_mirror_ct_cli.py  test_mirror_ct_rest_custom_validators.py  test_qos_ct_cli.py  test_qos_ct_rest_custom_validators.py
ops-tests/feature/: acl_classifier_common_lib.py  acl_common_test_suite.py  mirror_feature_test.md  qos_feature_test.md  test_classifierd_ft_ace_apply.py  test_classifierd_ft_ace_parameters.py  test_classifierd_ft_acl_create_delete.py  test_classifierd_ft_acl_icmp_traffic.py  test_classifierd_ft_acl_ingress_apply.py  test_classifierd_ft_acl_ingress_egress_apply.py  test_classifierd_ft_acl_tier_2.py  test_classifierd_ft_acl_udp_traffic.py  test_classifierd_validate_1switch_2hosts_l2.py  test_classifierd_validate_1switch_2hosts_l3.py  test_classifierd_validate_2switch_2hosts_l2.py  test_classifierd_validate_2switch_2hosts_l3.py  test_classifierd_validate_2switch_2hosts_lag_l2.py  test_classifierd_validate_2switch_2hosts_lag_l3.py  test_copp.py  test_mirror.py  test_mirror_physical.py  test_qos_ft.py  test_qos_trust.py  topo_defs.py  topo_funcs.py
ops/opsplugins/: README.md
ops/opsplugins/acl/: README.md
ops/opsplugins/copp/: README.md
ops/opsplugins/mirror/: README.md  mirror.py
ops/opsplugins/qos/: README.md  port_qos.py  q_profile.py  q_profile_entry.py  qos.py  qos_cos_map_entry.py  qos_dscp_map_entry.py  qos_utils.py  queue.py  system_qos.py
src/: CMakeLists.txt  classifierd.c  classifierd.h  classifierd_ovsdb_util.c  ops-classifierd.c
src/acl/: CMakeLists.txt  DESIGN.md  README.md
src/acl/cli-plugin/: CMakeLists.txt  access_list_vty.c  access_list_vty.h  access_list_vty_ovsdb.c  access_list_vty_ovsdb.h  access_list_vty_ovsdb_util.c  access_list_vty_ovsdb_util.h  access_list_vty_util.c  access_list_vty_util.h  vtysh_ovsdb_access_list_context.c  vtysh_ovsdb_access_list_context.h
src/acl/daemon/: acl_daemon_acls.c  acl_daemon_init.c  acl_daemon_ports.c
src/acl/include/: acl_db_util.h  acl_parse.h
src/acl/switchd-plugin/: CMakeLists.txt  acl.c  acl.h  acl_log.c  acl_log.h  acl_ofproto.c  acl_ofproto.h  acl_plugin.c  acl_plugin.h  acl_port.c  acl_port.h  acl_port_lag_utils.c  acl_port_lag_utils.h
src/acl/util/: acl_db_util.c  acl_parse.c
src/common/: ops_cls_status_msgs.c  ops_cls_status_table.c
src/copp/: CMakeLists.txt  README.md
src/copp/cli/: CMakeLists.txt  copp_vty.c
src/copp/include/: copp-temp-keys.h  copp_vty.h
src/copp/switchd-plugin/: CMakeLists.txt  copp-stats-plugin.c
src/include/: acl_daemon.h  ops_cls_status_msgs.h  ops_cls_status_table.h
src/mirror/: CMakeLists.txt  README.md
src/mirror/cli/: CMakeLists.txt  mirror_cli.c  mirror_cli.h  mirror_vty.c  mirror_vty.h
src/ops/opsplugins/: README.md
src/qos/: CMakeLists.txt  README.md  qos_design.md
src/qos/cli/: CMakeLists.txt  qos_apply_global_vty.c  qos_apply_global_vty.h  qos_apply_port_vty.c  qos_apply_port_vty.h  qos_cos_map_vty.c  qos_cos_map_vty.h  qos_cos_port_vty.c  qos_cos_port_vty.h  qos_dscp_map_vty.c  qos_dscp_map_vty.h  qos_dscp_port_vty.c  qos_dscp_port_vty.h  qos_queue_profile_vty.c  qos_queue_profile_vty.h  qos_schedule_profile_vty.c  qos_schedule_profile_vty.h  qos_trust_global_vty.c  qos_trust_global_vty.h  qos_trust_port_vty.c  qos_trust_port_vty.h  qos_utils_vty.c  qos_utils_vty.h  qos_vty.c  qos_vty.h
src/qos/include/: qos_utils.h
src/qos/switchd-plugin/: CMakeLists.txt
src/qos/switchd-plugin/include/: qos_map.h  qos_plugin.h  qos_profile.h  qos_statistics.h  qos_trust.h
src/qos/switchd-plugin/src/: qos_map.c  qos_plugin.c  qos_profile.c  qos_statistics.c  qos_trust.c  qos_utils.c
tests/: README.md
tests/qos/component/: test_ct_qos_cli.py  test_ct_qos_rest_custom_validators.py
tests/qos/feature/: test_ft_qos_cli.py
